make banner smaller

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: JL Woodturnings
+title: Woodslab Designs
 description: |
   Handcrafted wooden bowls turned from locally sourced trees
 owner: Josh Lesch
